# EnvOpenClock

./: .gitignore  LICENSE  README.md
3d files/: Programming - Shortcut.lnk  Simple Stand.stl
Firmware/: ButtonFunctions.txt  CMakeLists.txt  SyncTimetoClock.py  display.c  display.h  main.c  monitor_com3.py  music.c  pico_reboot_botloader.py  rtc.c  rtc.h  synctime_set_anim.py
KiCad Files/: #auto_saved_files#  Env-MicroDotClock-rounded.kicad_pcb  Env-MicroDotClock-rounded.kicad_pro  Env-MicroDotClock.kicad_pcb  Env-MicroDotClock.kicad_pcb.backup  Env-MicroDotClock.kicad_pro  Env-MicroDotClock.kicad_sch  Env-MicroDotClock.round-tracks-config  fp-lib-table  freerouting.frb  sym-lib-table  ~Env-MicroDotClock.kicad_sch.lck
KiCad Files LOB/: Env-MicroDotClock.kicad_pcb  Env-MicroDotClock.kicad_pro  Env-MicroDotClock.kicad_sch
KiCad Files LOB/Resources/: LTP-305G.stp  ltp-305g.dcm  ltp-305g.lib
KiCad Files LOB/Resources/IS31FL3728.pretty/: IS31FL3728-QFLS2-TR.kicad_sym  IS31FL3728-QFLS2-TR.lib
KiCad Files LOB/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
KiCad Files Onboard Pico/: #auto_saved_files#  Env-MicroDotClock.kicad_pcb  Env-MicroDotClock.kicad_pro  Env-MicroDotClock.kicad_sch  IS31FL3731 - 01.kicad_sch  IS31FL3731 - 02.kicad_sch  IS31FL3731 - 03.kicad_sch  IS31FL3731 - 04.kicad_sch  MCU.kicad_sch  untitled.kicad_sch
KiCad Files Onboard Pico/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
KiCad Files/Resources/: ltp-305g.kicad_sym
KiCad Files/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
(+13 files in other folders)
